--- a/paper.tex
+++ b/paper.tex
@@ -35,7 +35,7 @@ Mention\cite{kour2014real}
 \section{\normalfont \textsc{Basic Concepts/Technology Used}}
 \section{\normalfont \textsc{Literature Review}}
 \section{\normalfont \textsc{Proposed Model}}
-\section{\normalfont \textsc{Imprementation and Results}}
+\section{\normalfont \textsc{Implementation and Results}}
 \section{\normalfont \textsc{Conclusion}}
 
 \bibliographystyle{unsrt}  
