author name change

--- a/paper.tex
+++ b/paper.tex
@@ -10,9 +10,9 @@
 %opening
 \title{\huge \textbf{Title for paper submitted to 10th Project \\ Innovation Contest 2021}}
 
-\author[1]{Priyansi}
-\author[2]{Biswaroop Bhattacharjee}
-\author[3]{Junaid Rahim}
+\author[1]{Author 1}
+\author[2]{Author 2}
+\author[3]{Author 3}
 \affil[1]{School of Computer Engineering, KIIT, 1905110@kiit.ac.in}
 \affil[2,3]{School of Computer Engineering, KIIT}
 
