added index terms

--- a/paper.tex
+++ b/paper.tex
@@ -13,7 +13,7 @@
 \author[1]{Author 1}
 \author[2]{Author 2}
 \author[3]{Author 3}
-\affil[1]{School of Computer Engineering, KIIT, 1905110@kiit.ac.in}
+\affil[1]{School of Computer Engineering, KIIT, 1234567@kiit.ac.in}
 \affil[2,3]{School of Computer Engineering, KIIT}
 
 \date{}
@@ -27,6 +27,8 @@
 \begin{abstract}
 
 \end{abstract}
+
+{\bf Index Terms - } Software Engineering, Machine Learning, Web Technologies, Networking
 
 \section{\normalfont \textsc{Introduction}}
 
